crates/serde-feather/tests/ui/enum_type.stderr
error: FeatherSerialize only supports unit variants or newtype variants with one unnamed field
 --> tests/ui/enum_type.rs:5:12
  |
5 |     Circle { radius: u8 },
  |            ^^^^^^^^^^^^^^

error: FeatherDeserialize only supports unit variants or newtype variants with one unnamed field
 --> tests/ui/enum_type.rs:5:12
  |
5 |     Circle { radius: u8 },
  |            ^^^^^^^^^^^^^^
