crates/serde-feather/tests/ui/enum_type.rs
use serde_feather::{FeatherDeserialize, FeatherSerialize};

#[derive(FeatherSerialize, FeatherDeserialize)]
enum Shape {
    Circle { radius: u8 },
}

fn main() {}
